fix(styles): incorrect grid row size on mobile

--- a/assets/pages/index/page.css
+++ b/assets/pages/index/page.css
@@ -21,7 +21,7 @@
     "contact"
     "stats";
   gap: 0.5em;
-  grid-template-rows: calc(var(--profileHeight) + 10px) 1fr 1fr 3fr;
+  grid-template-rows: calc(var(--profileHeight) + 10px) 1fr auto auto;
 }
 
 #intro picture,
@@ -160,8 +160,7 @@ h1 {
 
 #meat {
   max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: var(--marginLarge) auto;
 }
 
 p::not(:first)::before {
